// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleSelector 應該匹配快照 - 有選擇狀態 1`] = `
<div
  class="space-y-3"
>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="true"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="checked"
      id="role-admin"
      role="checkbox"
      type="button"
      value="on"
    >
      <span
        class="flex items-center justify-center text-current"
        data-state="checked"
        style="pointer-events: none;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </span>
    </button>
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-admin"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shield h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
        管理員
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        擁有系統的完整管理權限
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="true"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="checked"
      id="role-staff"
      role="checkbox"
      type="button"
      value="on"
    >
      <span
        class="flex items-center justify-center text-current"
        data-state="checked"
        style="pointer-events: none;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </span>
    </button>
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-staff"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-store h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m2 7 4.41-4.41A2 2 0 0 1 7.83 2h8.34a2 2 0 0 1 1.42.59L22 7"
          />
          <path
            d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
          />
          <path
            d="M15 22v-4a2 2 0 0 0-2-2h-2a2 2 0 0 0-2 2v4"
          />
          <path
            d="M2 7h20"
          />
          <path
            d="M22 7v3a2 2 0 0 1-2 2a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 16 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 12 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 8 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 4 12a2 2 0 0 1-2-2V7"
          />
        </svg>
        員工
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        可以管理商品、庫存和訂單
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="unchecked"
      id="role-viewer"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-viewer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        檢視者
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        只能查看系統資料，不能修改
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="unchecked"
      id="role-installer"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-installer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-pen h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
          />
          <path
            d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
          />
        </svg>
        安裝師傅
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        負責安裝工作，可查看和管理安裝單
      </p>
    </div>
  </div>
</div>
`;

exports[`RoleSelector 應該匹配快照 - 無選擇狀態 1`] = `
<div
  class="space-y-3"
>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="unchecked"
      id="role-admin"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-admin"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shield h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
        管理員
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        擁有系統的完整管理權限
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="unchecked"
      id="role-staff"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-staff"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-store h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m2 7 4.41-4.41A2 2 0 0 1 7.83 2h8.34a2 2 0 0 1 1.42.59L22 7"
          />
          <path
            d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
          />
          <path
            d="M15 22v-4a2 2 0 0 0-2-2h-2a2 2 0 0 0-2 2v4"
          />
          <path
            d="M2 7h20"
          />
          <path
            d="M22 7v3a2 2 0 0 1-2 2a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 16 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 12 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 8 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 4 12a2 2 0 0 1-2-2V7"
          />
        </svg>
        員工
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        可以管理商品、庫存和訂單
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="unchecked"
      id="role-viewer"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-viewer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        檢視者
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        只能查看系統資料，不能修改
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-state="unchecked"
      id="role-installer"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-installer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-pen h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
          />
          <path
            d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
          />
        </svg>
        安裝師傅
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        負責安裝工作，可查看和管理安裝單
      </p>
    </div>
  </div>
  <p
    class="text-sm text-destructive"
  >
    請至少選擇一個角色
  </p>
</div>
`;

exports[`RoleSelector 應該匹配快照 - 禁用狀態 1`] = `
<div
  class="space-y-3"
>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="true"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-disabled=""
      data-state="checked"
      disabled=""
      id="role-admin"
      role="checkbox"
      type="button"
      value="on"
    >
      <span
        class="flex items-center justify-center text-current"
        data-disabled=""
        data-state="checked"
        style="pointer-events: none;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </span>
    </button>
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-admin"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-shield h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
          />
        </svg>
        管理員
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        擁有系統的完整管理權限
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      id="role-staff"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-staff"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-store h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m2 7 4.41-4.41A2 2 0 0 1 7.83 2h8.34a2 2 0 0 1 1.42.59L22 7"
          />
          <path
            d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
          />
          <path
            d="M15 22v-4a2 2 0 0 0-2-2h-2a2 2 0 0 0-2 2v4"
          />
          <path
            d="M2 7h20"
          />
          <path
            d="M22 7v3a2 2 0 0 1-2 2a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 16 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 12 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 8 12a2.7 2.7 0 0 1-1.59-.63.7.7 0 0 0-.82 0A2.7 2.7 0 0 1 4 12a2 2 0 0 1-2-2V7"
          />
        </svg>
        員工
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        可以管理商品、庫存和訂單
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      id="role-viewer"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-viewer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        檢視者
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        只能查看系統資料，不能修改
      </p>
    </div>
  </div>
  <div
    class="flex items-start space-x-3"
  >
    <button
      aria-checked="false"
      class="peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground mt-1"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      id="role-installer"
      role="checkbox"
      type="button"
      value="on"
    />
    <div
      class="grid gap-1.5 leading-none"
    >
      <label
        class="text-sm leading-none select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-center gap-2 font-medium cursor-pointer"
        data-slot="label"
        for="role-installer"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-pen h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
          />
          <path
            d="M18.375 2.625a1 1 0 0 1 3 3l-9.013 9.014a2 2 0 0 1-.853.505l-2.873.84a.5.5 0 0 1-.62-.62l.84-2.873a2 2 0 0 1 .506-.852z"
          />
        </svg>
        安裝師傅
      </label>
      <p
        class="text-sm text-muted-foreground"
      >
        負責安裝工作，可查看和管理安裝單
      </p>
    </div>
  </div>
</div>
`;
